--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "fmt": "prettier --write 'pages/**/*.js' 'styles/**/*.scss'"
   },
   "dependencies": {
     "next": "12.3.1",
@@ -15,6 +16,8 @@
   },
   "devDependencies": {
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1"
+    "eslint-config-next": "12.3.1",
+    "prettier": "^2.7.1",
+    "sass": "^1.55.0"
   }
 }
