--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "fmt": "prettier --write 'pages/**/*.js' 'styles/**/*.scss'"
   },
   "dependencies": {
+    "@progfay/scrapbox-parser": "^8.1.0",
+    "axios": "^1.0.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
